--- a/dc-postgresql.yml
+++ b/dc-postgresql.yml
@@ -9,7 +9,8 @@ services:
       POSTGRES_PASSWORD: tengkorak123
       POSTGRES_DB: generic_db
     volumes:
-      - pgdata:/var/lib/postgresql/data 
+      - pgdata:/var/lib/postgresql/data
+      - ./init-db:/docker-entrypoint-initdb.d # Mount the initialization script 
     ports:
       - 5432:5432
     networks:
